# kindle-clippings-manager

./: .cirrus.yml  .gitignore  .rubocop.yml  Dockerfile  Gemfile  README.md  docker-compose.yml  main.rb  pyproject.toml
clippings/: manage.py
clippings/clippings/: asgi.py  settings.py  urls.py  wsgi.py
clippings/scripts/: import.py
kindle-clippings-manager/: package.json
kindle-clippings-manager/app/views/layouts/: application.html.erb
kindle-clippings-manager/config/: application.rb  cable.yml  secrets.yml
kindle-clippings-manager/config/environments/: production.rb
kindle_clippings_manager/: import.py
lib/entities/: book.rb  highlight.rb
lib/interactors/: clippings_parser.rb  clippings_parser_interactor.rb
lib/repositories/: books_repository.rb
lib/tasks/: import_to_repository.thor  test.thor
spec/integration/repositories/: books_repository_spec.rb
spec/support/: mongo_connection.rb  mongo_db_integration.rb
