[tool.poetry]
name = "clippings"
version = "0.1.0"
description = ""
authors = ["Valter Nepomuceno <valter.nep@gmail.com>"]

[tool.poetry.scripts]
import = "clippings.scripts.import:import_clippings_command"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
ftfy = "^6.0.3"
black = "^21.7b0"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"